--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "express-session": "^1.17.3",
     "helmet": "^6.0.1",
     "passport": "^0.6.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "prisma-pagination": "^0.2.3"
   },
   "devDependencies": {
     "@types/connect-pg-simple": "^7.0.0",
