--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@prisma/client": "^4.11.0",
     "connect-pg-simple": "^8.0.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
@@ -24,6 +25,7 @@
   },
   "devDependencies": {
     "@types/connect-pg-simple": "^7.0.0",
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/express-session": "^1.17.6",
     "@types/node": "^18.14.6",
