--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "helmet": "^6.0.1",
+    "mailgun-js": "^0.22.0",
     "multer": "1.4.5-lts.1",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
@@ -29,6 +30,7 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/express-session": "^1.17.6",
+    "@types/mailgun-js": "^0.22.13",
     "@types/multer": "^1.4.7",
     "@types/node": "^18.14.6",
     "@types/passport": "^1.0.12",
